# workflow-orchestration-queue-hotel41-a

./: .ai-repository-summary.md  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.agents/skills/forensic-analysis-report/: SKILL.md
.agents/skills/orchestration-run-analysis/: SKILL.md
.devcontainer/: devcontainer.json
docs/: implementation-plan.md  new_features.md
docs/.archived/: non-idle-failure-forensics.md  pr-approval-merge-plan.md  prompt-refactor-analysis.md
docs/debrief-and-document/: DEBRIEF_REPORT_project-setup_2026-03-27.md  PROGRESS_REPORT_project-setup_2026-03-27.md  trace.md
plan_docs/: OS-APOW Architecture Guide v3.2.md  OS-APOW Development Plan v4.2.md  OS-APOW Implementation Specification v1.2.md  interactive-report.html
src/: __init__.py  notifier_service.py  orchestrator_sentinel.py
src/models/: __init__.py  github_events.py  work_item.py
src/queue/: __init__.py  github_queue.py
test/: test-opencode-run.sh
tests/: __init__.py
tests/integration/: test_integration.py
tests/unit/: test_github_queue.py  test_work_item.py
